// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots List List 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
  color: currentColor;
}

.c3:last-child {
  margin-bottom: 0;
}

.c1 {
  color: currentColor;
  margin: 0;
}

.c1 .c2 {
  margin-bottom: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <ul
      className="c1"
      color="currentColor"
    >
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With compact spacing 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
  color: currentColor;
}

.c3:last-child {
  margin-bottom: 0;
}

.c1 {
  color: currentColor;
  margin: 0;
}

.c1 .c2 {
  margin-bottom: 0;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <ul
      className="c1"
      color="currentColor"
    >
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With custom colour 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
  color: currentColor;
}

.c3:last-child {
  margin-bottom: 0;
}

.c1 {
  color: #cc1439;
  margin: 0;
}

.c1 .c2 {
  margin-bottom: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <ul
      className="c1"
      color="red"
    >
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With custom font size and line height 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
  color: currentColor;
}

.c3:last-child {
  margin-bottom: 0;
}

.c4 {
  margin-bottom: 8px;
  color: currentColor;
  font-size: 20px;
}

.c4:last-child {
  margin-bottom: 0;
}

.c1 {
  color: currentColor;
  font-size: 14px;
  line-height: 1.71428571;
  margin: 0;
}

.c1 .c2 {
  margin-bottom: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <ul
      className="c1"
      color="currentColor"
      fontSize="small"
    >
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        className="c2 c4"
        color="currentColor"
        fontSize="large"
      >
        Larger List Item 3
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots List With left alignment 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c3 {
  margin-bottom: 8px;
  color: currentColor;
}

.c3:last-child {
  margin-bottom: 0;
}

.c1 {
  color: currentColor;
  margin: 0;
  padding-left: 18px;
}

.c1 .c2 {
  margin-bottom: 8px;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <ul
      className="c1"
      color="currentColor"
    >
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 1
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 2 that is really really really really really really really really really long
      </li>
      <li
        className="c2 c3"
        color="currentColor"
      >
        List Item 3
      </li>
    </ul>
  </div>
</div>
`;
